--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>M.Han</title>
+  <title>Meng Han</title>
   <link href="assets/img/icon.ico" rel="shortcut icon">
   <!-- 最新版本的 Bootstrap 核心 CSS 文件 -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
@@ -24,19 +24,17 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="index.html">M.Han</a>
+        <a class="navbar-brand" href="index.html">Meng Han</a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav">
+
+        <ul class="nav navbar-nav navbar-right">
           <li class="active"><a href="index.html">Home<span class="sr-only">(current)</span></a></li>
           <li><a href="en/research.html">Research</a></li>
           <li><a href="en/cv.html">CV</a></li>
           <li><a href="en/Teaching.html">Teaching</a></li>
-        </ul>
-        <ul class="nav navbar-nav navbar-right">
-
           <li class="dropdown">
             <a href="zh-cn/index.html" role="button" aria-haspopup="true" aria-expanded="false" >中文简体 </a>
           </li>
@@ -67,7 +65,7 @@
         <div class="col-md-1"></div>
         <div class="col-md-3 col-xs-12">
           <p style="padding-top: 10%;"><strong>Email:</strong></p>
-          <p><a href="mailto:m.han@rug.nl" target="_blank">m.han@rug.nl</a></p>
+          <p><a href="mailto:Meng Han@rug.nl" target="_blank">Meng Han@rug.nl</a></p>
           <br>
           <p><strong>Address:</strong></p>
           <p>P.O. Box 800, 9700AV, the Netherlands</p>
