--- a/zh-cn/index.html
+++ b/zh-cn/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>M.Han</title>
+  <title>Meng Han</title>
   <link href="../assets/img/icon.ico" rel="shortcut icon">
   <!-- 最新版本的 Bootstrap 核心 CSS 文件 -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
@@ -24,19 +24,19 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="index.html">M.Han</a>
+        <a class="navbar-brand" href="index.html">Meng Han</a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
+
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
           <li class="active"><a href="index.html">Home<span class="sr-only">(current)</span></a></li>
           <li><a href="../en/research.html">Research</a></li>
           <li><a href="../en/cv.html">CV</a></li>
           <li><a href="../en/Teaching.html">Teaching</a></li>
-        </ul>
-        <ul class="nav navbar-nav navbar-right">
-
           <li class="dropdown">
             <a href="../index.html" role="button" aria-haspopup="true" aria-expanded="false" >English </a>
           </li>
@@ -58,8 +58,8 @@
           <p>我的主要研究方向包括资产定价，期货市场和衍生品定价。<a href="../en/research.html">请点击这里查看我的论文</a> </p>
           <p>我将于2021-2022学年求职。</p>
           <p>这是我的<a href="../assets/pdf/cv-zn.pdf" target="_blank" rel="noopener noreferrer">简历</a>（最近的更新是2022年2月）。</p>
-          <p><a href="https://scholar.google.nl/citations?user=R_i5w5sAAAAJ&hl=e" target="_blank" rel="noopener noreferrer">这是我的Google Scholar</a></p>
-          <p><a href="https://www.researchgate.net/profile/Meng-Han-24" target="_blank" rel="noopener noreferrer">这是我的ResearchGate</a></p>
+          <p>这是我的<a href="https://scholar.google.nl/citations?user=R_i5w5sAAAAJ&hl=e" target="_blank" rel="noopener noreferrer">Google Scholar</a></p>
+          <p>这是我的<a href="https://www.researchgate.net/profile/Meng-Han-24" target="_blank" rel="noopener noreferrer">ResearchGate</a></p>
         </div>
         <div class="col-md-1"></div>
       </div>
@@ -68,7 +68,7 @@
         <div class="col-md-1"></div>
         <div class="col-md-3 col-xs-12">
           <p style="padding-top: 10%;"><strong>邮箱:</strong></p>
-          <p><a href="mailto:m.han@rug.nl" target="_blank">m.han@rug.nl</a></p>
+          <p><a href="mailto:Meng Han@rug.nl" target="_blank">Meng Han@rug.nl</a></p>
           <br>
           <p><strong>地址:</strong></p>
           <p>P.O. Box 800, 9700AV, the Netherlands</p>
@@ -80,7 +80,7 @@
       <div class="row">
         <div class="col-md-2"></div>
         <div class="col-md-8"> 
-          <p style="font-size: 9px; text-align: center;">由于服务器的限制，一部分网页链接与个人照片可能无法在境内访问，敬请谅解。
+          <p style="font-size: 11px; text-align: center;">由于服务器的限制，一部分网页链接与个人照片可能无法在境内访问，敬请谅解。
             如果您有任何需求，请邮件联系我，我将非常乐意为您解答。谢谢！</p>
         </div>
         <div class="col-md-2"></div>
