--- a/en/Teaching.html
+++ b/en/Teaching.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>M.Han</title>
+  <title>Meng Han</title>
   <link href="../assets/img/icon.ico" rel="shortcut icon">
   <!-- 最新版本的 Bootstrap 核心 CSS 文件 -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
@@ -24,19 +24,19 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="../index.html">M.Han</a>
+        <a class="navbar-brand" href="../index.html">Meng Han</a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
+
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
           <li><a href="../index.html">Home<span class="sr-only">(current)</span></a></li>
           <li><a href="research.html">Research</a></li>
           <li><a href="cv.html">CV</a></li>
           <li class="active"><a href="Teaching.html">Teaching</a></li>
-        </ul>
-        <ul class="nav navbar-nav navbar-right">
-
           <li class="dropdown">
             <a href="../zh-cn/index.html" role="button" aria-haspopup="true" aria-expanded="false" >中文简体 </a>
           </li>
