--- a/zh-cn/index.html
+++ b/zh-cn/index.html
@@ -68,7 +68,7 @@
         <div class="col-md-1"></div>
         <div class="col-md-3 col-xs-12">
           <p style="padding-top: 10%;"><strong>邮箱:</strong></p>
-          <p><a href="mailto:Meng Han@rug.nl" target="_blank">Meng Han@rug.nl</a></p>
+          <p><a href="mailto:m.Han@rug.nl" target="_blank">m.Han@rug.nl</a></p>
           <br>
           <p><strong>地址:</strong></p>
           <p>P.O. Box 800, 9700AV, the Netherlands</p>
@@ -80,7 +80,7 @@
       <div class="row">
         <div class="col-md-2"></div>
         <div class="col-md-8"> 
-          <p style="font-size: 11px; text-align: center;">由于服务器的限制，一部分网页链接与个人照片可能无法在境内访问，敬请谅解。
+          <p style="font-size: 11px; text-align: center;">由于服务器的限制，一部分网页链接可能无法在境内访问，敬请谅解。
             如果您有任何需求，请邮件联系我，我将非常乐意为您解答。谢谢！</p>
         </div>
         <div class="col-md-2"></div>
