--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
           <p >I am Meng Han, a PhD candidate in Finance at University of Groningen. My supervisors are <span><a href="https://www.rug.nl/staff/l.j.r.scholtens/" target="_blank" rel="noopener noreferrer">Prof. Bert Scholtens</a></span>   and <span><a href="https://www.rug.nl/staff/l.dam/" target="_blank" rel="noopener noreferrer">Prof. Lammertjan Dam</a></span>.</p>
           <p>My main research interests include asset pricing, futures markets and derivative pricing.</p>
           <p>I am on the Job Market during the 2021-2022 academic year.</p>
-          <p><a href="https://scholar.google.nl/citations?user=R_i5w5sAAAAJ&hl=e" target="_blank" rel="noopener noreferrer">Here is my Google Scholar</a></p>
-          <p><a href="https://www.researchgate.net/profile/Meng-Han-24" target="_blank" rel="noopener noreferrer">Here is my ResearchGate</a></p>
+          <p>Here is my<a href="https://scholar.google.nl/citations?user=R_i5w5sAAAAJ&hl=e" target="_blank" rel="noopener noreferrer"> Google Scholar</a></p>
+          <p>Here is my <a href="https://www.researchgate.net/profile/Meng-Han-24" target="_blank" rel="noopener noreferrer"> ResearchGate</a></p>
         </div>
         <div class="col-md-1"></div>
       </div>
@@ -65,7 +65,7 @@
         <div class="col-md-1"></div>
         <div class="col-md-3 col-xs-12">
           <p style="padding-top: 10%;"><strong>Email:</strong></p>
-          <p><a href="mailto:Meng Han@rug.nl" target="_blank">Meng Han@rug.nl</a></p>
+          <p><a href="mailto:m.Han@rug.nl" target="_blank">m.Han@rug.nl</a></p>
           <br>
           <p><strong>Address:</strong></p>
           <p>P.O. Box 800, 9700AV, the Netherlands</p>
