--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <div class="col-md-1"></div>
         <div class="col-md-3 col-xs-12">
           <p style="padding-top: 10%;"><strong>Email:</strong></p>
-          <p><a href="mailto:m.Han@rug.nl" target="_blank">m.Han@rug.nl</a></p>
+          <p><a href="mailto:m.han@rug.nl" target="_blank">m.han@rug.nl</a></p>
           <br>
           <p><strong>Address:</strong></p>
           <p>P.O. Box 800, 9700AV, the Netherlands</p>
