--- a/en/research.html
+++ b/en/research.html
@@ -37,6 +37,7 @@
         <ul class="nav navbar-nav navbar-right">
           <li><a href="../index.html">Home<span class="sr-only">(current)</span></a></li>
           <li class="active"><a href="research.html">Research</a></li>
+          <li><a href="Appendix.html">Appendix</a></li>
           <li><a href="cv.html">CV</a></li>
           <li><a href="Teaching.html">Teaching</a></li>
           <li class="dropdown">
@@ -54,15 +55,16 @@
         <div class="col-md-10">
           <div class="container"></div>
           <div style="padding-top: 8px;">
-            <strong><a href="">Commodity Momentum and Reversal: Do They Exist, and If So, Why?</a></strong>&nbsp;(Job Market Paper)
+            <strong class="f18">Commodity Momentum and Reversal: Do They Exist, and If So, Why?</strong>&nbsp;(Job Market Paper)
             <p style="padding-top: 4px;">This paper studies the momentum and reversal patterns in commodity markets and jointly explains these patterns with risk-return relation. Investigating 23 commodities for a period of fifty years, this paper examines the momentum strategies with formation and holding periods up to sixty months in commodity futures and spot markets. The results suggest quantitively similar momentum and reversal patterns in futures and spot markets once the net convenience yield (latent payoff) is included into spot return: A momentum effect starts first, followed by a reversal effect and then a momentum effect again. The durations and magnitudes of the momentum and reversal effects vary a little with the formation periods. This momentum and reversal patterns can be jointly explained by traditional asset pricing factors together with a yield factor related to the net convenience yield. The results are robust to the selection of momentum strategies and the estimation method with rolling windows.</p>
           </div>
           <div style="padding-top: 8px;">
-            <strong><a href="">The Net Convenience Yield and the Cross-section of Commodity Returns</a></strong>&nbsp;(with <span><a href="https://www.rug.nl/staff/l.dam/" target="_blank" rel="noopener noreferrer">Lammertjan Dam</a></span>  and <span><a href="https://www.rug.nl/staff/l.j.r.scholtens/" target="_blank" rel="noopener noreferrer">Bert Scholtens</a></span> )
+            <strong class="f18">The Net Convenience Yield and the Cross-section of Commodity Returns</strong>&nbsp;(with <span><a href="https://www.rug.nl/staff/l.dam/" target="_blank" rel="noopener noreferrer">Lammertjan Dam</a></span>  and <span><a href="https://www.rug.nl/staff/l.j.r.scholtens/" target="_blank" rel="noopener noreferrer">Bert Scholtens</a></span> )
             <p style="padding-top: 4px;">We study which risk factors explain the cross-section of commodity returns and decompose commodity returns into capital gains and net convenience yields. The findings reveal that a commodity-specific three-factor model performs best in explaining the cross-section of commodity returns. As to individual commodity returns, the ability of risk factors to explain the cross-sectional variation mainly results from the yields. For commodity portfolios returns, the ability of risk factors derives from both capital gains and yields. Commodity-specific factors perform better in explaining the cross-section of portfolio capital gains, whereas asset pricing factors perform better in explaining the cross-section of portfolio yields.</p>
           </div>
           <div style="padding-top: 8px;">
-            <strong><a href="">What Drives Commodity Price Variation?</a></strong>&nbsp;(with<span><a href="https://www.rug.nl/staff/l.dam/" target="_blank" rel="noopener noreferrer">Lammertjan Dam</a></span>and <span><a href="https://www.nhh.no/en/employees/faculty/walter-pohl/" target="_blank" rel="noopener noreferrer">Walt Pohl</a></span> )
+            
+            <strong class="f18">What Drives Commodity Price Variation?</strong>&nbsp;(with<span><a href="https://www.rug.nl/staff/l.dam/" target="_blank" rel="noopener noreferrer">Lammertjan Dam</a></span>and <span><a href="https://www.nhh.no/en/employees/faculty/walter-pohl/" target="_blank" rel="noopener noreferrer">Walt Pohl</a></span> )
             <p style="padding-top: 4px;">We study the source of commodity price variation with asset pricing theory considering the net convenience yield as the payoff stream of holding a commodity, similar to the dividend on a stock. We relate the commodity price variation to expected future  return, expected future yield growth (the net convenience yield growth), and price bubble. We find that almost all commodity price variation comes from the predictability of return and yield growth in the long run and that the predictability of yield growth has a much larger contribution, which is attributed to high correlation between yield growth and bubble shocks. A high commodity price mainly comes from high expected future net convenience yield, while a high price might relate to a high or low expected future return. These findings are consistent with the present value model in the case that future payoff makes larger contribution in driving current price. The seasonality in net convenience yield does not affect the predictability of return and yield growth.</p>
           </div>
         </div>
