--- a/en/Appendix.html
+++ b/en/Appendix.html
@@ -49,15 +49,15 @@
   </nav>
   <div id="content">
     <div id="Appendix" class="container" >
-      <!-- <h3>Please see some online appendixes of the research papers here.</h3> -->
+      <h3>Please see some online appendixes of the research papers here.</h3>
       <div class="row">
         <div class="col-md-1"></div>
         <div class="col-md-10">
           <div class="container"></div>
           <div style="padding-top: 8px;">
-            <p>Please see some online appendixes of the research papers here:</p>
+            <!-- <p>Please see some online appendixes of the research papers here:</p> -->
  
-            <strong>1.  Online appendix to "Commodity momentum and reversal: Do they exist, and if so, why?"   (download <a href="../assets/pdf/Online appendix to Commodity momentum and reversal.pdf" target="_blank">here</a>)</strong>
+            <strong class="f18">1.  Online appendix to "Commodity momentum and reversal: Do they exist, and if so, why?"</strong>   (download <a href="../assets/pdf/Online appendix to Commodity momentum and reversal.pdf" target="_blank">here</a>)
           </div>
 
         </div>
