--- a/en/research.html
+++ b/en/research.html
@@ -131,6 +131,10 @@
             <table class="table">
               <tbody>
                 <tr>
+                  <td>2022</td>
+                  <td>European Financial Management Association 2022 Annual Meeting (EFMA 2022), SOM PhD Conference</td>
+                </tr>
+                <tr>
                   <td>2021</td>
                   <td>International Risk Management Conference 2021 (IRMC2021), SOM PhD Conference, SOM PhD Seminar</td>
                 </tr>
