--- a/en/Teaching.html
+++ b/en/Teaching.html
@@ -56,6 +56,10 @@
             <table class="table">
               <tbody>
                 <tr>
+                  <td>2022</td>
+                  <td>Quantitative Finance (master), Teaching assistance</td>
+                </tr>
+                <tr>
                   <td>2021</td>
                   <td>Responsible Finance and Investing (master), Teaching assistance</td>
                 </tr>
