--- a/zh-cn/index.html
+++ b/zh-cn/index.html
@@ -69,7 +69,7 @@
         <div class="col-md-1"></div>
         <div class="col-md-3 col-xs-12">
           <p style="padding-top: 10%;"><strong>邮箱:</strong></p>
-          <p><a href="mailto:m.han@rug.nl" target="_blank">m.han@rug.nl</a></p>
+          <p><a href="mailto:m.han0609@hotmail.com" target="_blank">m.han0609@hotmail.com</a></p>
           <br>
           <p><strong>地址:</strong></p>
           <p>P.O. Box 800, 9700AV, the Netherlands</p>
