--- a/en/Teaching.html
+++ b/en/Teaching.html
@@ -35,7 +35,7 @@
         <ul class="nav navbar-nav navbar-right">
           <li><a href="../index.html">Home<span class="sr-only">(current)</span></a></li>
           <li><a href="research.html">Research</a></li>
-          <li><a href="Appendix.html">Appendix</a></li>
+          <!-- <li><a href="Appendix.html">Appendix</a></li> -->
           <li><a href="cv.html">CV</a></li>
           <li class="active"><a href="Teaching.html">Teaching</a></li>
           <li class="dropdown">
