--- a/en/cv.html
+++ b/en/cv.html
@@ -37,7 +37,7 @@
         <ul class="nav navbar-nav navbar-right">
           <li><a href="../index.html">Home<span class="sr-only">(current)</span></a></li>
           <li><a href="research.html">Research</a></li>
-          <li><a href="Appendix.html">Appendix</a></li>
+          <!-- <li><a href="Appendix.html">Appendix</a></li> -->
           <li class="active"><a href="cv.html">CV</a></li>
           <li><a href="Teaching.html">Teaching</a></li>
           <li class="dropdown">
