--- a/zh-cn/index.html
+++ b/zh-cn/index.html
@@ -35,7 +35,7 @@
         <ul class="nav navbar-nav navbar-right">
           <li class="active"><a href="index.html">Home<span class="sr-only">(current)</span></a></li>
           <li><a href="../en/research.html">Research</a></li>
-          <li><a href="../en/Appendix.html">Appendix</a></li>
+          <!-- <li><a href="../en/Appendix.html">Appendix</a></li> -->
           <li><a href="../en/cv.html">CV</a></li>
           <li><a href="../en/Teaching.html">Teaching</a></li>
           <li class="dropdown">
